# caracal

./: .gitignore  CMakeLists.txt  LICENSE  LtExample.cpp  README.md  client_demo.cpp  demos.torrent  meson.build  notes.txt
demos/: client_demo.cpp  dht_demo.cpp  dht_get_test.cpp  dht_put_test.cpp  lorem.txt  seed_demo.cpp
include/: alert.h  alerts.h  caracal.h  caracal.hpp  client_session.hpp  dht_item.h  download_status.h  libtorrent_session.hpp  post_bundle.h  torrent_handle.h  torrent_status.h
src/: Session.cpp  Session.h  alerts.h  caracal.cpp  caracal.hpp  client_session.cpp  client_session.hpp  dht_item.h  dht_time.cpp  download_status.cpp  download_status.h  floppa_session.cpp  floppa_session.hpp  libtorrent_session.cpp  libtorrent_session.hpp  magnet_pool.cpp  magnet_pool.hpp  post_bundle.cpp  post_bundle.h  torrent_handle.cpp  torrent_handle.h  torrent_pool.cpp  torrent_pool.hpp  torrent_status.cpp  torrent_status.h
tests/: SessionTest.cpp
